# nhanes-patient-generator

./: .gitignore  Dockerfile  README.md  compose.yaml  logging.ini  nhanes-calc.py  pyproject.toml  requirements.txt
examples/: cbc.json  demo.json  patient.json
nhanes-calc/: nhanes-calc.py
patient-generator/: patient_generator.py  seqn_selector.py
patient_generator/: apps.py  cvc.json  db_utils.py  generator.py  manage.py  metainfo.py  models.py  nhanes_search.py  nhanes_stats.py  patient_generator.py  queries.py  requirements.txt  settings.py  urls.py  views.py  wsgi.py
patient_generator/db_scripts/: db_tool.py  db_utils.py  demo_data.py  generator.py  metainfo.py  nhanes_random_respondent.py  nhanes_search.py  nhanes_stats.py  table_info.py
patient_generator/migrations/: 0001_initial.py  0002_aggregatednhanesdata_delete_nhanesaggregateddata_and_more.py
patient_generator/patient_generator/: asgi.py  settings.py  urls.py  wsgi.py
patient_generator/patient_generator_api/: apps.py
sql/: nhanes_data_pool.sql  setup.sql
tests/: test_nhanes_stats.py
